--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: selinafahy@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
-
+linkedin_username: selina-fahy-blw34
 twitter_username:
 github_username: Selina-Fahy
 
